--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,21 +45,21 @@ Compiled and minified CSS -->
 
 <div id="second-circle" >
  
-        <h4 class="total">Total Recovered<h4>
+        <h4 id="totalR">Total Recovered<h4>
 
 
 </div>
 
 <div id="third-circle" >
  
-    <h4 class="total">Total Deaths</h4>
+    <h4 id="totalD">Total Deaths</h4>
 
 
 </div>
 
 <div id="fourth-circle" >
  
-    <h4 class="total">Total Cases</h4>
+    <h4 id="totalC">Total Cases</h4>
 
 
 </div>
