All cases displayed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,21 +46,23 @@ Compiled and minified CSS -->
 <div id="second-circle" >
  
         <h4 id="totalR">Total Recovered<h4>
-
+            <h3 id="allRecovered"> </h3>
 
 </div>
 
 <div id="third-circle" >
  
     <h4 id="totalD">Total Deaths</h4>
-
+    <h3 id="allDeaths"> </h3>
 
 </div>
 
 <div id="fourth-circle" >
  
     <h4 id="totalC">Total Cases</h4>
-
+<h3 id="allCases"> </h3>
+   
+</ul>
 
 </div>
 
