--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,13 +31,8 @@ Compiled and minified CSS -->
         </div>
          <br>
          <br>
-        <input type="submit" value="Find Cases" id="btn" onclick="submitForm()">
-        <script>
-            function submitForm() {
-            document.find-cases.submit();
-            document.getElementfind-cases.reset();
-            }
-        </script>
+        <input type="submit" value="Find Cases" id="btn">
+       
   </form>
 </div>
 
@@ -61,7 +56,16 @@ Compiled and minified CSS -->
  
     <h4 id="totalC">Total Cases</h4>
 <h3 id="allCases"> </h3>
-   
+
+</ul>
+
+</div>
+
+<div id="fifth-circle" >
+ 
+  <h4 id="user">Recents Searches..</h4>
+<h3 id="userInfo"> </h3>
+
 </ul>
 
 </div>
