--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@ Compiled and minified CSS -->
 </head>
 
 <body>
+  <script src="search.js"></script>
   <script src="index.js"></script>
 
   <div id="first-circle">
@@ -24,19 +25,24 @@ Compiled and minified CSS -->
 
 </div>
     <form id="find-cases">
-        <h4 id="search-text"> Search </h4> 
+   
         <div id="all-inputs"> 
         <div class="input-field">
           <input type="text" id="countryName" name="country-name" class="input" placeholder="Country Name..">
-        </div>
-         <br>
-         <br>
-        <input type="submit" value="Find Cases" id="btn">
+          </div>
+          <br>
+       <input type="submit" value="Search" id="btn">
+    <br>
+     <p id="searchR"> 
+
+    </p>
        
   </form>
+
 </div>
 
-        </div>
+</div>
+    
 
 <div id="second-circle" >
  
