all req finshed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,22 +21,16 @@ Compiled and minified CSS -->
   <script src="index.js"></script>
 
   <div id="first-circle">
-<div id="searchR"> 
-
-</div>
     <form id="find-cases">
    
-        <div id="all-inputs"> 
-        <div class="input-field">
+        <div id="all-inputs">
           <input type="text" id="countryName" name="country-name" class="input" placeholder="Country Name..">
-          </div>
           <br>
-       <input type="submit" value="Search" id="btn">
-    <br>
-     <p id="searchR"> 
+          <br>
+          <input type="submit" value="Search" id="btn">
+          <p id="searchR"> 
 
-    </p>
-       
+          </p>
   </form>
 
 </div>
@@ -71,6 +65,15 @@ Compiled and minified CSS -->
  
   <h4 id="user">Recents Searches..</h4>
 <h3 id="userInfo"> </h3>
+
+</ul>
+
+</div>
+
+<div id="sixth-circle" >
+ 
+  <h4 id="userMostViews">Most Views..</h4>
+<h3 id="mostViews"> </h3>
 
 </ul>
 
