--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,8 @@ Compiled and minified CSS -->
   <script src="search.js"></script>
   <script src="index.js"></script>
 
-  <div id="first-circle">
+  <div id="first-circle" >
+    <!-- <img id="first-earth" src="earthimg.jpg" alt="The Pulpit Rock" width="304" height="228"> -->
     <form id="find-cases">
    
         <div id="all-inputs">
@@ -30,7 +31,8 @@ Compiled and minified CSS -->
           <input type="submit" value="Search" id="btn">
           <p id="searchR"> 
 
-          </p>
+            </p>
+
   </form>
 
 </div>
@@ -45,14 +47,14 @@ Compiled and minified CSS -->
 
 </div>
 
-<div id="third-circle" >
+<div id="third-circle"  >
  
     <h4 id="totalD">Total Deaths</h4>
     <h3 id="allDeaths"> </h3>
 
 </div>
 
-<div id="fourth-circle" >
+<div id="fourth-circle">
  
     <h4 id="totalC">Total Cases</h4>
 <h3 id="allCases"> </h3>
